multiple page design changes

--- a/src/components/Layouts/Header/Css/HeaderResponsive.css
+++ b/src/components/Layouts/Header/Css/HeaderResponsive.css
@@ -10,7 +10,7 @@
     }
 
     .pkopkerrwer.sfsdfweweweqwq img {
-        height: 375px;
+        height: 400px;
     }
 
     .safsrfwee img{
@@ -34,7 +34,7 @@
     }
 
     .pkopkerrwer.sfsdfweweweqwq img {
-        height: 375px;
+        height: 400px;
     }
 
     .safsrfwee img{
@@ -62,7 +62,7 @@
     }
 
     .pkopkerrwer.sfsdfweweweqwq img {
-        height: 375px;
+        height: 400px;
     }
 
     .safsrfwee img{
@@ -123,7 +123,7 @@
     }
 
     .pkopkerrwer.sfsdfweweweqwq img {
-        height: 303px;
+        height: 331px;
     }
 
     .safsrfwee img{
@@ -151,6 +151,10 @@
         margin-inline: 0.3rem;
         font-size: 1rem;
     }
+
+    .pkopkerrwer.sfsdfweweweqwq img {
+        height: 288px;
+    }
 }
 
 
@@ -169,7 +173,7 @@
     }
 
     .pkopkerrwer.sfsdfweweweqwq img {
-        height: 263px;
+        height: 288px;
     }
 
     .safsrfwee img{
@@ -210,7 +214,7 @@
     }   
 
     .pkopkerrwer.sfsdfweweweqwq img {
-        height: 257px;
+        height: 252px;
     }
 
     .safsrfwee img{
