--- a/src/pages/Wedding/Css/WeddingResponsive.css
+++ b/src/pages/Wedding/Css/WeddingResponsive.css
@@ -2,7 +2,8 @@
   .dfbhhfgdf,
   .dfgdfg255,
   .jdfkdf,
-  .dfbhhfgdf55 {
+  .dfbhhfgdf55,
+  .ffdgf548 {
     height: auto;
   }
 }
@@ -15,7 +16,8 @@
   .dfbhhfgdf,
   .dfgdfg255,
   .jdfkdf,
-  .dfbhhfgdf55 {
+  .dfbhhfgdf55,
+  .ffdgf548 {
     height: auto;
   }
 }
@@ -31,7 +33,7 @@
   }
 
   .dfgdfg255{
-    height: 25.9vw;
+    height: 23vw;
   }
 
   .dfbhhfgdf55 {
@@ -40,6 +42,10 @@
 
   .jdfkdf{
     height: 359px;
+  }
+
+  .ffdgf548 {
+    height: 259px;
   }
 }
 
