--- a/src/pages/FestiveShop/css/FestiveShop.css
+++ b/src/pages/FestiveShop/css/FestiveShop.css
@@ -41,7 +41,7 @@
 
 .fhgdfg {
   width: 100%;
-  height: 320px;
+  height: 314px;
   background-size: 100% 100%;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -49,7 +49,7 @@
 
 .overlay-sales {
   width: 100%;
-  height: 320px;
+  height: 100%;
   border-radius: 25px;
   border: 4px solid var(--pink-main-color);
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 75%, rgb(61, 61, 61) 100%);
@@ -63,33 +63,45 @@
   text-align: center;
 }
 .cvbjhdfdf h4 {
-  padding-top: 270px;
   color: white;
 }
 
 .dfgfdg7853 {
   width: 100%;
-  height: 350px;
+  height: 359px;
   border-radius: 25px;
   border: 4px solid var(--pink-main-color);
 }
+
 .dfgfdg7853 img {
-  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hdfbjh554 {
   width: 100%;
   padding: 10px 0;
-  margin-top: 274px;
   background-color: rgba(133, 13, 85, 0.6);
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
   opacity: 80%;
-}
-.hdfbjh554 h5 {
-  margin-bottom: 0;
+  bottom: 0;
   text-align: center;
-  color: white;
+}
+
+.hdfbjh554 h5{
+  color: #fff;
+}
+
+.hdfbjh554 h5:last-child{
+  margin-bottom: 0 !important;
+}
+
+.hdfbjh554 {
+  width: 100%;
+  padding: 10px 0;
+  background-color: rgba(133, 13, 85, 0.6);
+  opacity: 80%;
+  bottom: 0;
 }
 
 .dfgjhdfgdfgf {
@@ -202,6 +214,44 @@
   height: 300px;
   object-fit: cover;
 }
+
+
+
+
+@media only screen and (min-width: 3001px){
+  .fhgdfg,
+  .dfgfdg7853 {
+    height: auto;
+  }
+}
+
+
+
+
+
+@media only screen and (max-width: 3000px){
+  .fhgdfg,
+  .dfgfdg7853 {
+    height: auto;
+  }
+}
+
+
+
+
+
+
+@media only screen and (max-width: 1366px){
+  .fhgdfg {
+    height: 314px;
+  }
+
+  .dfgfdg7853{
+    height: 359px;
+  }
+}
+
+
 
 /*end  sales page  css   */
 /*end  sales page  css   */
