--- a/src/pages/FestiveShop/css/FestiveShop.css
+++ b/src/pages/FestiveShop/css/FestiveShop.css
@@ -146,21 +146,23 @@
 
 .dfbdff {
   width: 100%;
-  height: 360px;
+  height: 292px;
   border-radius: 25px;
   margin-bottom: 1rem;
   border: 4px solid var(--pink-main-color);
   cursor: pointer;
 }
 .dfbdff img {
-  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .overlay-sale {
-  width: 100%;
-  height: 353px;
-  background: #ffffff;
-  border-radius: 25px;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 75%, rgb(61, 61, 61) 100%);
 }
 
@@ -180,7 +182,11 @@
 
 .bsdfhsdfsdf {
   text-align: center;
-  margin-top: 255px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  bottom: 6%;
 }
 .bsdfhsdfsdf h5 {
   margin-bottom: 0;
@@ -220,7 +226,9 @@
 
 @media only screen and (min-width: 3001px){
   .fhgdfg,
-  .dfgfdg7853 {
+  .dfgfdg7853,
+  .dfbdff,
+  .dfngjhfdgdf {
     height: auto;
   }
 }
@@ -231,7 +239,9 @@
 
 @media only screen and (max-width: 3000px){
   .fhgdfg,
-  .dfgfdg7853 {
+  .dfgfdg7853,
+  .dfbdff,
+  .dfngjhfdgdf {
     height: auto;
   }
 }
@@ -248,6 +258,48 @@
 
   .dfgfdg7853{
     height: 359px;
+  }
+
+  .dfbdff {
+    height: 292px;
+  }
+
+  .dfngjhfdgdf {
+    height: 220px;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 991px){
+  .dfgjhdfgdfgf{
+    grid-template-columns: auto auto auto;
+  }
+
+  .dfbdff,
+  .dfgfdg7853,
+  .fhgdfg,
+  .dfngjhfdgdf {
+    height: auto;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 600px){
+  .dfgjhdfgdfgf{
+    grid-template-columns: auto auto;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 393px){
+  .dfgjhdfgdfgf{
+    grid-template-columns: auto;
   }
 }
 
