--- a/src/pages/OnSale/OnSale.css
+++ b/src/pages/OnSale/OnSale.css
@@ -146,20 +146,22 @@
 
 .dfbdff {
   width: 100%;
-  height: 360px;
+  height: 292px;
   border-radius: 25px;
   margin-bottom: 1rem;
   border: 4px solid var(--pink-main-color);
 }
 .dfbdff img {
-  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .overlay-sale {
-  width: 100%;
-  height: 353px;
-  background: #ffffff;
-  border-radius: 25px;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 75%, rgb(61, 61, 61) 100%);
 }
 
@@ -179,7 +181,6 @@
 
 .bsdfhsdfsdf {
   text-align: center;
-  margin-top: 255px;
 }
 .bsdfhsdfsdf h5 {
   margin-bottom: 0;
@@ -243,7 +244,9 @@
 
 @media only screen and (min-width: 3001px){
   .fhgdfg,
-  .dfgfdg7853 {
+  .dfgfdg7853,
+  .dfbdff,
+  .dfngjhfdgdf {
     height: auto;
   }
 }
@@ -254,7 +257,9 @@
 
 @media only screen and (max-width: 3000px){
   .fhgdfg,
-  .dfgfdg7853 {
+  .dfgfdg7853,
+  .dfbdff,
+  .dfngjhfdgdf {
     height: auto;
   }
 }
@@ -271,6 +276,14 @@
 
   .dfgfdg7853{
     height: 359px;
+  }
+
+  .dfbdff {
+    height: 292px;
+  }
+
+  .dfngjhfdgdf {
+    height: 220px;
   }
 }
 
@@ -291,6 +304,34 @@
 
   .sdfwedweeerr .fsrweerrr{
     border-right: 0;
+  }
+
+  .dfgjhdfgdfgf{
+    grid-template-columns: auto auto auto;
+  }
+
+  .dfbdff,
+  .dfgfdg7853,
+  .fhgdfg {
+    height: auto;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 600px){
+  .dfgjhdfgdfgf{
+    grid-template-columns: auto auto;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 393px){
+  .dfgjhdfgdfgf{
+    grid-template-columns: auto;
   }
 }
 
