--- a/src/pages/Cart/Css/Cart.css
+++ b/src/pages/Cart/Css/Cart.css
@@ -1,16 +1,17 @@
 .cart-wrapper .diwebjrwert_left h4 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 .cart-wrapper .diwebjrwert_left .odnwejirhwerwer {
   background: #f5f5f5;
   border-radius: 5px;
 }
 .cart-wrapper .diwebjrwert_left .odnwejirhwerwer p {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .cart-wrapper .diwebjrwert_left .odnwejirhwerwer p .btn-main {
   font-size: 0.9rem;
   font-weight: 400;
+  padding: 0.4rem 0.4rem !important;
 }
 .cart-wrapper .diwebjrwert_left .dfgjhbdfg {
   border: 1px solid var(--light-background-color);
