--- a/src/pages/ProductDetail/Css/ProductDetail.css
+++ b/src/pages/ProductDetail/Css/ProductDetail.css
@@ -1607,7 +1607,7 @@ h4.oijiwuihfih-eiuheir{
 
 .oijdkejwjewr{
   border-radius: 10px;
-  background: #dedede;
+  background: #f5f5f5;
 }
 
 .oijdkejwjewr h6 span{
