--- a/src/pages/ContactUs/ContactUs.module.css
+++ b/src/pages/ContactUs/ContactUs.module.css
@@ -1,3 +1,8 @@
+.aboutusbannr {
+  width: 100%;
+  height: 500px;
+}
+
 .jvjhubjkjoij .address-section {
 	 margin-bottom: 40px;
 }
@@ -117,7 +122,7 @@
 {
   padding: 6px 22px;
   border: none;
-  background-color: #e38800;
+  background-color: var(--pink-main-color);
   color: white;
   font-weight: 500;
   border-radius: 4px;
@@ -129,7 +134,7 @@
 {
   padding: 6px 22px;
   border: none;
-  background-color: #93370b;
+  background-color: #000;
   color: white;
   font-weight: 500;
   border-radius: 4px;
