multiple page changes

--- a/src/components/Layouts/Header/Css/HeaderResponsive.css
+++ b/src/components/Layouts/Header/Css/HeaderResponsive.css
@@ -119,7 +119,7 @@
 @media only screen and (max-width: 1869px){
     header .header-top .doewhruiwerwer_right ul li {
         margin-inline: 0.3rem;
-        font-size: 1.2em;
+        font-size: 1.2rem;
     }
 
     .pkopkerrwer.sfsdfweweweqwq img {
