--- a/src/pages/UserProfile/Css/Chat.module.css
+++ b/src/pages/UserProfile/Css/Chat.module.css
@@ -242,7 +242,7 @@ form input:global(.form-control){
   border: 1px solid #ddd;
   border-radius: 8px;
   background: #fff;
-  padding-right: 80px; /* 👈 space for icons */
+  padding-right: 20px; /* 👈 space for icons */
 }
 
 .inputBox input {
@@ -300,6 +300,38 @@ form input:global(.form-control){
   padding: 0 18px;
   border-radius: 8px;
   font-size: 14px;
+}
+
+.filePreview {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #f5f6f7;
+  border-radius: 8px;
+  padding: 6px 10px;
+  margin-right: 10px;
+  /* margin-bottom: 6px; */
+}
+
+.fileLeft {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.fileLeft img {
+  width: 36px;
+  height: 36px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.fileLeft span {
+  font-size: 14px;
+  max-width: 220px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 
